--- a/3.md
+++ b/3.md
@@ -31,3 +31,28 @@ var lengthOfLongestSubstring = function(s) {
     return number
 };
 ```
+## js-2
+
+> 无需新建数组，以及对map进行删除操作
+
+```javascript
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var lengthOfLongestSubstring = function(s) {
+    let number=0,i=0,j=0
+    let map = {}
+    for (i=0;i<s.length;i++){
+        if (s[i] in map){
+            number = number < i-j ? i-j : number
+            if (map[s[i]]>=j){
+                j = map[s[i]]+1
+            }
+        }
+        map[s[i]] = i
+    }
+    number = number < i-j ? i-j : number
+    return number
+};
+```
