--- a/5.md
+++ b/5.md
@@ -35,3 +35,43 @@ function changeStr(s){
 }
 
 ```
+
+## js-2
+
+> 不改变原来的字符串，中心点分步讨论
+
+```javascript
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function(s) {
+    let start=0,end=0
+    for(let i=0;i<s.length;i++){
+        // 中心为一个点
+        for(let j=1;true;j++){
+            if(i-j<0||i+j>=s.length||s[i-j]!=s[i+j]){
+                if(end-start < 2*j-1){
+                    start = i-j+1
+                    end = i+j
+                }
+                break;
+            }
+        }
+
+        //中心为两个点
+        if(s[i]==s[i+1]){
+            for(let j=1;true;j++){
+                if(i-j<0||i+j+1>=s.length||s[i-j]!=s[i+j+1]){
+                    if(end-start < 2*j){
+                        start = i-j+1
+                        end = i+j+1
+                    }
+                    break;
+                }
+            }
+        }
+    }
+    return s.substring(start,end)
+};
+```
