--- a/6.md
+++ b/6.md
@@ -56,3 +56,32 @@ var convert = function (s, numRows) {
     return str
 };
 ```
+
+## js-2
+
+> 无需使用array模拟数据结构，根据规律直接提取
+
+```javascript
+/**
+ * @param {string} s
+ * @param {number} numRows
+ * @return {string}
+ */
+var convert = function(s, numRows) {
+    //一行直接返回
+    if (numRows == 1) return s;
+
+    let str = ""
+    for (let i = 0; i < numRows; i++) {
+        for (let j = i; j < s.length; j += (2 * numRows - 2)) {
+            str += s[j]
+            let odd = j + (2 * numRows - 2) - 2 * i
+            if (i && i < numRows - 1 && odd < s.length) {
+                str += s[odd]
+            }
+
+        }
+    }
+    return str
+};
+```
