--- a/42.md
+++ b/42.md
@@ -39,3 +39,33 @@ function cal(height, max,result) {
     return result
 }
 ```
+
+## go
+
+> 6ms
+
+```go
+func trap(height []int) int {
+    left,right := 0,len(height)-1
+    maxLeft,maxRight := 0,0
+    res := 0
+    for left<=right {
+        if height[left] <= height[right]{
+            if height[left]>=maxLeft{
+                maxLeft=height[left]
+            }else{
+                res += maxLeft-height[left]
+            }
+            left++
+        }else{
+            if height[right]>=maxRight{
+                maxRight=height[right]
+            }else{
+                res += maxRight-height[right]
+            }
+            right--
+        }
+    }
+    return res
+}
+```
